WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
213648
Fix for crash in accessibility/roles-exposed.html in isolated tree mode.
https://bugs.webkit.org/show_bug.cgi?id=213648
Summary
Fix for crash in accessibility/roles-exposed.html in isolated tree mode.
Andres Gonzalez
Reported
2020-06-26 09:53:32 PDT
Fix for crash in accessibility/roles-exposed.html in isolated tree mode.
Attachments
Patch
(6.74 KB, patch)
2020-06-26 10:05 PDT
,
Andres Gonzalez
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Andres Gonzalez
Comment 1
2020-06-26 10:05:41 PDT
Created
attachment 402878
[details]
Patch
EWS
Comment 2
2020-06-26 11:07:40 PDT
Committed
r263571
: <
https://trac.webkit.org/changeset/263571
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 402878
[details]
.
Radar WebKit Bug Importer
Comment 3
2020-06-26 11:08:16 PDT
<
rdar://problem/64814204
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug